Added Collaborative Filtering and made it so books are embedded when received